First vesrion 1.0.3 release

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "Cyberzet\\SingleAdmin\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "extra": {
         "laravel": {
             "providers": [
